[project]
python = "^3.13"
name = "nhs-app"

[tool.poetry]
name = "nhs-app"
version = "0.0.1-alpha"
description = "TODO"

license = "MIT"

authors = [
    #TODO add authors
]

readme = 'README.md'

repository = "https://github.com/NHSDigital/nhs-app"
homepage = "https://digital.nhs.uk/developer/api-catalogue/nhs-app"

keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords


[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.1.41"


[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^24.3"
pip-licenses = "^2.0.1"
jinja2 = "^3.1.5"


[tool.poetry.scripts]
